[workspace]
resolver = "2"

members = ["eip712", "uniswap"]


[workspace.dependencies]
eip712 = { path = "./eip712" }
uniswap_lib = { path = "./uniswap" }
tokio = { version = "1.29.1", features = ["full"] }
chrono = "0.4.26"
anyhow = "1.0.82"
thiserror = "2.0.3"
alloy = { version = "0.6.2", features = ["full", "signer-ledger", "eip712"] }
alloy-sol-types = "0.8.9"
tiny-keccak = "2.0.2"
serde_json = "1.0.132"
derive_builder = "0.20.2"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
serde = "1.0.215"
bytes = { version = "1.4.0", default-features = false }
rlp = { version = "0.6.1", default-features = false }
ethabi = { version = "18.0.0", default-features = false, features = ["serde"] }
unicode-xid = { version = "0.2", default-features = false, features = [
    "no_std",
] }
hex = { version = "0.4.3" }
cryptoxide = "0.4"
