[package]
name = "eip712"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
bytes = { workspace = true }
rlp = { workspace = true }
ethabi = { workspace = true }
unicode-xid = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
cryptoxide = { workspace = true }

